--- a/event_entry/package.json
+++ b/event_entry/package.json
@@ -14,7 +14,8 @@
     "@types/react": "^18.2.59",
     "@types/react-dom": "^18.2.19",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
     "typescript": "^4.9.5",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
